--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="Ramy.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Ramya.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Ramya D</h1></h1>
             <p>Am Student</p>
         </div>
